tests/ui/extern-flag/public-and-private.stderr
error: type `S` from private dependency 'somedep' in public interface
  --> $DIR/public-and-private.rs:10:5
   |
LL |     pub field: somedep::S,
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/public-and-private.rs:5:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

